--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <p>
                     Easiest way to install is via <strong>Package Control</strong>.
                     <ul>
-                        <li>Go to <strong>Command Palette</strong>(<kbd>CTRL + SHIFT + P</kbd> OR <kbd>CMD + SHIFT + P</kbd>)</li>
+                        <li>Go to <strong>Command Palette</strong>(<kbd>CTRL + </kbd> <kbd>SHIFT </kbd>+<kbd> P</kbd> OR <kbd>CMD + SHIFT + P</kbd>)</li>
                         <li>Select <strong>Package Control : Install Package</strong></li>
                         <li>Search for <strong>Github Markdown Snippets</strong></li>
                     </ul>
