fixed some typos and missing tags

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <p>
                     Easiest way to install is via <strong>Package Control</strong>.
                     <ul>
-                        <li>Go to <strong>Command Palette</strong>(<kbd>CTRL + </kbd> <kbd>SHIFT </kbd>+<kbd> P</kbd> OR <kbd>CMD + SHIFT + P</kbd>)</li>
+                        <li>Go to <strong>Command Palette</strong>(<code>Ctrl + Shift + P</code> OR <code>Cmd + Shift + P</code>)</li>
                         <li>Select <strong>Package Control : Install Package</strong></li>
                         <li>Search for <strong>Github Markdown Snippets</strong></li>
                     </ul>
@@ -38,7 +38,7 @@
                 <table class="table table-hover table-bordered">
                     <thead>
                         <tr>
-                            <th><kbd>TAB</kbd> Trigger</th>
+                            <th><code>Tab</code> Trigger</th>
                             <th>Markdown Equivalent</th>
                             <th>Output</th>
                         </tr>
