removed package files from gh-pages

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="page-header">
             <h1><a href="https://github.com/praveenpuglia/github_markdown_snippets">GitHub Markdown Snippets <small>GitHub flavored Markdown with plain'ol HTML knowledge! Boom!</small></a></h1>
             <p class="clearfix">
-                <img src="https://img.shields.io/badge/Version-1.1.0-brightgreen.svg" alt="Version : 1.1.0">
+                <img src="https://img.shields.io/badge/Version-2.0.0-brightgreen.svg" alt="Version : 1.1.0">
                 <iframe class="pull-right" src="https://ghbtns.com/github-btn.html?user=praveenpuglia&repo=github_markdown_snippets&type=star&count=false&size=large" frameborder="0" scrolling="0" width="100px" height="30px"></iframe>
             </p>
         </div>
@@ -39,8 +39,6 @@
             <div class="panel-body">
                 <h2>Usage</h2>
                 <p class="alert alert-info"><strong>Heads Up!</strong> Output on this page are Bootstrap styled. </p>
-                <hr>
-                <p>All you have do is prefix any HTML tag name you know with an <strong>"m"</strong> and hit tab. Long tag names are shortened for better usage.</p>
                 <table class="table table-hover table-bordered">
                     <thead>
                         <tr>
@@ -51,60 +49,60 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>mi</td>
+                            <td>i</td>
                             <td>*Italic Text* </td>
                             <td><i>Italic Text</i></td>
                         </tr>
                         <tr>
-                            <td>mb</td>
+                            <td>b</td>
                             <td>**Bold Text** </td>
                             <td><strong>Bold Text</strong></td>
                         </tr>
                         <tr>
-                            <td>mbq</td>
+                            <td>bq</td>
                             <td> > Put a nice, beautiful <br> > quote here...</td>
                             <td><blockquote>Put a nice beautiful quote here...</blockquote></td>
                         </tr>
                         <tr>
-                            <td>mstrike</td>
+                            <td>strike</td>
                             <td>~~Strike Through~~</td>
                             <td><s>Strike Through</s></td>
                         </tr>
 
                         <tr>
-                            <td>mh1</td>
+                            <td>h1</td>
                             <td># Heading 1</td>
                             <td><h1>Heading 1</h1></td>
                         </tr>
 
                         <tr>
-                            <td>mh2</td>
+                            <td>h2</td>
                             <td>## Heading 2</td>
                             <td><h2>Heading 2</h2></td>
                         </tr>
                         <tr>
-                            <td>mh3</td>
+                            <td>h3</td>
                             <td>### Heading 3</td>
                             <td><h3>Heading 3</h3></td>
                         </tr>
                         <tr>
-                            <td>mh4</td>
+                            <td>h4</td>
                             <td>#### Heading 4</td>
                             <td><h4>Heading 4</h4></td>
                         </tr>
                         <tr>
-                            <td>mh5</td>
+                            <td>h5</td>
                             <td>##### Heading 5</td>
                             <td><h5>Heading 5</h5></td>
                         </tr>
                         <tr>
-                            <td>mh6</td>
+                            <td>h6</td>
                             <td>###### Heading 6</td>
                             <td><h6>Heading 6</h6></td>
                         </tr>
                         
                         <tr>
-                            <td>mul</td>
+                            <td>ul</td>
                             <td>- I  <br>- Love <br>- Markdown</td>
                             <td>
                                 <ul>
@@ -116,7 +114,7 @@
                         </tr>
 
                         <tr>
-                            <td>mul</td>
+                            <td>ol</td>
                             <td>1. First Item  <br>2. Second Item <br>3. Third Item</td>
                             <td>
                                 <ol>
@@ -128,31 +126,31 @@
                         </tr>
 
                         <tr>
-                            <td>mcode</td>
+                            <td>code</td>
                             <td>`Inline Code Snippet`</td>
                             <td><code>Inline Code Snippet</code></td>
                         </tr>
 
                         <tr>
-                            <td>mpre</td>
+                            <td>pre</td>
                             <td>```language <br> Multi-line Code<br>``` </td>
                             <td><pre>Multi-line Code</pre></td>
                         </tr>
 
                         <tr>
-                            <td>ma</td>
+                            <td>a</td>
                             <td>[Link Title](URL)</td>
                             <td><a href="#">Link Title</a></td>
                         </tr>
 
                         <tr>
-                            <td>mimg</td>
+                            <td>img</td>
                             <td>![Image Title](Image Source)</td>
                             <td><img src="https://camo.githubusercontent.com/d612efdc6605e0a837aae78c8acfd4ea44f9f522/68747470733a2f2f776173696e2e696f2f77702d636f6e74656e742f75706c6f6164732f323031352f30352f73686f77696d6167652e706e67" alt="Image Title"></td>
                         </tr>
 
                         <tr>
-                            <td>mtable</td>
+                            <td>table</td>
                             <td>
                                 | Column 1 | Column 2 | <br>
                                 | -------- | -------- | <br>
@@ -178,7 +176,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <td>mhr</td>
+                            <td>hr</td>
                             <td>---</td>
                             <td><hr></td>
                         </tr>
