fix: broken image link

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         <tr>
                             <td>img</td>
                             <td>![Image Title](Image Source)</td>
-                            <td><img src="https://camo.githubusercontent.com/d612efdc6605e0a837aae78c8acfd4ea44f9f522/68747470733a2f2f776173696e2e696f2f77702d636f6e74656e742f75706c6f6164732f323031352f30352f73686f77696d6167652e706e67" alt="Image Title"></td>
+                            <td><img style="max-width: 100%" src="https://c1.staticflickr.com/5/4112/5170590074_714d36db83_b.jpg" alt="Image Title"></td>
                         </tr>
 
                         <tr>
