--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <head>
     <meta charset="UTF-8">
     <title>GitHub Markdown Snippets</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <style>
         body {
-            font-family: 'Montserrat', sans-serif;
+            font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
         }
     </style>
 </head>
@@ -14,13 +13,14 @@
     <a href="https://github.com/praveenpuglia/github_markdown_snippets"><img style="position: fixed; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
     <div class="container">
         <div class="page-header">
-            <h1><a href="https://github.com/praveenpuglia/github_markdown_snippets">GitHub Markdown Snippets <small>GitHub flavored Markdown with plain'ol HTML knowledge! Boom!</small></a></h1>
-            <p class="clearfix">
-                <img src="https://img.shields.io/badge/Version-2.0.0-brightgreen.svg" alt="Version : 1.1.0">
+            <h1><a href="https://github.com/praveenpuglia/github_markdown_snippets">GitHub Markdown Snippets </a></h1>
+            <h3>GitHub flavored Markdown with plain'ol HTML knowledge! Boom!</h3>
+            <p style="display: flex;align-items: center;">
+                <img height="30px" style="margin-right: 10px" src="https://img.shields.io/badge/Version-2.1.0-brightgreen.svg" alt="Version : 2.1.0">
                 <iframe class="pull-right" src="https://ghbtns.com/github-btn.html?user=praveenpuglia&repo=github_markdown_snippets&type=star&count=false&size=large" frameborder="0" scrolling="0" width="100px" height="30px"></iframe>
             </p>
         </div>
-        <div class="panel panel-default">
+        <div class="panel panel-default m-t-2">
             <div class="panel-body">
                 <h2>Installation</h2>
                 <hr>
@@ -38,7 +38,6 @@
         <div class="panel panel-default">
             <div class="panel-body">
                 <h2>Usage</h2>
-                <p class="alert alert-info"><strong>Heads Up!</strong> Output on this page are Bootstrap styled. </p>
                 <table class="table table-hover table-bordered">
                     <thead>
                         <tr>
@@ -146,7 +145,7 @@
                         <tr>
                             <td>img</td>
                             <td>![Image Title](Image Source)</td>
-                            <td><img style="max-width: 100%" src="https://c1.staticflickr.com/5/4112/5170590074_714d36db83_b.jpg" alt="Image Title"></td>
+                            <td><img style="max-width: 400px" src="https://c1.staticflickr.com/5/4112/5170590074_714d36db83_b.jpg" alt="Image Title"></td>
                         </tr>
 
                         <tr>
@@ -158,7 +157,7 @@
                                 | Cell 2-1 | Cell 2-2 |
                             </td>
                             <td>
-                                <table class="table table-striped table-bordered"><thead>
+                                <table class="table table-bordered"><thead>
                                 <tr>
                                 <th>Column 1</th>
                                 <th>Column 2</th>
